admission/ValidatingAdmissionPolicy/policies/livenessprobe-httpget-host/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: livenessprobe-httpget-host-pod
  annotations:
    kubeapt.io/uuid: "f871b54a-afc3-47b9-b25f-0dfac4e2924a"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    livenessProbe:
      httpGet:
        path: /
        port: 80
        host: 127.0.0.1
